[gd_scene load_steps=8 format=2]

[ext_resource path="res://teleport_in.gd" type="Script" id=1]
[ext_resource path="res://Assets/Charsets/laser_vitor_jump_white.png" type="Texture" id=2]
[ext_resource path="res://Assets/Animations/light.png" type="Texture" id=3]
[ext_resource path="res://Assets/SFX/tp_in.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/laser_collide.wav" type="AudioStream" id=5]

[sub_resource type="ParticlesMaterial" id=1]
trail_divisor = 6
emission_shape = 2
emission_box_extents = Vector3( 13, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 320, 0 )
angular_velocity = 8.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0

[sub_resource type="Animation" id=2]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 50, 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="teleport_in" type="Area2D"]
script = ExtResource( 1 )

[node name="tp" type="TextureProgress" parent="."]
modulate = Color( 100, 100, 100, 1 )
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
max_value = 200.0
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="particles" type="Particles2D" parent="tp"]
show_behind_parent = true
position = Vector2( 51.522, -140 )
amount = 40
lifetime = 1.15
process_material = SubResource( 1 )

[node name="flash" type="Sprite" parent="tp"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 100, 100 )
scale = Vector2( 50, 50 )
texture = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="tp/flash"]
anims/tp_in = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="animtimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="tp_in" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
autoplay = true

[node name="tp_in_finished" type="AudioStreamPlayer" parent="tp_in"]
stream = ExtResource( 5 )

[node name="wait_time" type="Timer" parent="tp_in"]
wait_time = 0.35
one_shot = true

[connection signal="animation_finished" from="tp/flash/anim" to="." method="_on_anim_animation_finished"]
[connection signal="timeout" from="animtimer" to="." method="_on_animtimer_timeout"]
